--- a/src/app/pagina/crear-producto/crear-producto.component.html
+++ b/src/app/pagina/crear-producto/crear-producto.component.html
@@ -1,36 +1,77 @@
-<form #f="ngForm" (ngSubmit)="crearProducto()" >
-    <div>
-        <label >Nombre: </label>
-        <input type="text" name="nombre" [(ngModel)]="producto.nombre" required />
-    </div>
+<div class="card p-5">
 
-    <div>
-        <label >Descripcion: </label>
-        <textarea name="descripcion" [(ngModel)]="producto.descripcion" required ></textarea>
-    </div>
-
-    <div>
-        <label >Precio: </label>
-        <input type="number" name="precio" [(ngModel)]="producto.precio" required />
-    </div>
-
-    <div>
-        <label >Unidades: </label>
-        <input type="number" name="unidades" [(ngModel)]="producto.unidades" required />
-    </div>
-
-    <div>
-        <label >Imagen: </label>
-        <input type="file" name="imagenes" (change)="onFileChange($event)" multiple />
-    </div>
-
-    <div>
-        <label >Categoría: </label>
-        <select name="categoria" [(ngModel)]="producto.categoria" required >
-            <option value="" selected >Seleccione una categoría</option>
-            <option [value]="i+1" *ngFor="let item of categorias; index as i" >{{item}}</option>
-        </select>
+    <form #f="ngForm" (ngSubmit)="crearProducto()">
+        
+        <div class="mb-3 row">
+            <label class="col-sm-2 col-form-label">Nombre: </label>
+            <div class="col-sm-10">
+                <input #nombre="ngModel" class="form-control" [ngClass]="nombre.invalid &&
+                (nombre.dirty || nombre.touched) ? 'is-invalid' : ''" type="text" name="nombre"
+                [(ngModel)]="producto.nombre" required maxlength="50" />
+                <div class="invalid-feedback">
+                    Por favor, ingrese un nombre válido.
+                </div>
+            </div>
         </div>
 
-    <button type="submit" [disabled]="f.invalid" >Crear nuevo producto</button>
-</form>
+        <div class="mb-3 row">
+            <label class="col-sm-2 col-form-label">Descripcion: </label>
+            <div class="col-sm-10">
+                <input #descripcion="ngModel" class="form-control" [ngClass]="descripcion.invalid &&
+                (descripcion.dirty || descripcion.touched) ? 'is-invalid' : ''" type="text" name="descripcion"
+                [(ngModel)]="producto.descripcion" required maxlength="50" />
+                <div class="invalid-feedback">
+                    Por favor, ingrese una descripcion válida.
+                </div>
+            </div>
+        </div>
+
+        <div class="mb-3 row">
+            <label class="col-sm-2 col-form-label">Precio: </label>
+            <div class="col-sm-10">
+                <input #precio="ngModel" class="form-control" [ngClass]="precio.invalid &&
+                (precio.dirty || precio.touched) ? 'is-invalid' : ''" type="number" name="precio"
+                [(ngModel)]="producto.precio" required />
+                <div class="invalid-feedback">
+                    Por favor, ingrese una precio válido.
+                </div>
+            </div>
+        </div>
+
+        <div class="mb-3 row">
+            <label class="col-sm-2 col-form-label">Unidades: </label>
+            <div class="col-sm-10">
+                <input #unidades="ngModel" class="form-control" [ngClass]="unidades.invalid &&
+                (unidades.dirty || unidades.touched) ? 'is-invalid' : ''" type="number" name="unidades"
+                [(ngModel)]="producto.unidades" required  />
+                <div class="invalid-feedback">
+                    Por favor, ingrese una canticad válida.
+                </div>
+            </div>
+        </div>
+
+        <div class="mb-3 row">
+            <label class="col-sm-2 col-form-label">Imagen: </label>
+            <div class="col-sm-10">
+                <input type="file" name="imagenes" (change)="onFileChange($event)" multiple />
+                <div class="invalid-feedback">
+                    Por favor, ingrese al menos una imagen.
+                </div>
+            </div>
+        </div>
+
+        <div class="mb-3 row">
+            <label class="col-sm-2 col-form-label">Categoria: </label>
+            <div class="col-sm-10">
+                <select name="categoria" [(ngModel)]="producto.categoria" required>
+                    <option value="" selected>Seleccione una categoría</option>
+                    <option [value]="i+1" *ngFor="let item of categorias; index as i">{{item}}</option>
+                </select>
+            </div>
+        </div>
+
+        <button type="submit" [disabled]="f.invalid" class="btn btn-primary"><i class="fa-solid
+        {{esEdicion ? 'fa-pencil' : 'fa-circle-plus'}} me-1"></i>{{ esEdicion ? 'Editar' : 'Crear' }}
+            Producto</button>
+    </form>
+</div>
