--- a/src/app/pagina/gestion-productos/gestion-productos.component.html
+++ b/src/app/pagina/gestion-productos/gestion-productos.component.html
@@ -1,14 +1,17 @@
 <div class="card p-4">
     <div class="mb-3" >
-        <button type="button" class="btn btn-success me-2" ><i class="fa-solid fa-plus me-1"></i>
+        <button type="button" class="btn btn-success me-2" routerLink="/crear-producto" ><i class="fa-solid fa-plus me-1"></i>
         Crear</button>
-        <button type="button" class="btn btn-danger" ><i class="fa-solid fa-trash me-1"></i>
-        Eliminar</button>
+        
+        <button type="button" class="btn btn-danger" [disabled]="seleccionados.length == 0"
+        data-bs-toggle="modal" data-bs-target="#borrar"><i class="fa-solid fa-trash me-1"></i> Eliminar
+        {{textoBtnEliminar}}</button>
     </div>
 
     <table class="table table-striped table-hover">
         <thead>
             <tr>
+                <th></th>
                 <th>ID</th>
                 <th>Nombre</th>
                 <th>Descripcion</th>
@@ -20,8 +23,7 @@
         </thead>
         <tbody class="table-group-divider">
             <tr *ngFor="let item of productos" >
-                <td><input #check class="form-check-input" type="checkbox" (change)="seleccionar(item,
-                    check.checked)" /></td>
+                <td><input #check class="form-check-input" type="checkbox" (change)="seleccionar(item,check.checked)" /></td>
                 <td ><p>{{item.codigo}}</p></td>
                 <td ><p>{{item.nombre}}</p></td>
                 <td ><p>{{item.descripcion}}</p></td>
@@ -30,9 +32,9 @@
                 <td ><img [src]="item.imagenes[0]" width="120" /> </td>
                 <td><p>{{item.categoria}}</p></td>
                 <td>               
-                    <button type="button" class="btn btn-danger" [disabled]="seleccionados.length == 0"
-                    data-bs-toggle="modal" data-bs-target="#borrar"><i class="fa-solid fa-trash me-1"></i> Eliminar
-                    {{textoBtnEliminar}}</button>              
+                    <button type="button" class="btn btn-warning rounded-circle me-2"
+                    routerLink="/editar-producto/{{item.codigo}}">
+                    <i class="fa-solid fa-pen"></i></button>
                 </td>
             </tr>
         </tbody>
