--- a/src/app/pagina/login/login.component.html
+++ b/src/app/pagina/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+
+<div class="card p-5 ">
+    
+    <div class="form-signin w-40 m-auto">
+        
+        <form #f="ngForm" (ngSubmit)="login()">
+    
+            <div class="form-floating">
+                <input #email="ngModel" class="form-control" [ngClass]="email.invalid &&
+                (email.dirty || email.touched) ? 'is-invalid' : ''" type="email" name="email"
+                [(ngModel)]="sesion.email" email required id="floatingInput" placeholder="name@example.com"/> 
+                <label for="floatingInput">Email</label>
+            </div>
+            
+    
+            <div class="form-floating">
+                <input #password="ngModel" class="form-control" [ngClass]="password.invalid &&  
+                (password.dirty || password.touched) ? 'is-invalid' : ''" type="password" name="password" 
+                [(ngModel)]="sesion.password" required id="floatingPassword" placeholder="Password"/>
+                <label class="floatingInput">Contraseña: </label>
+            </div>
+    
+            <button class="w-100 btn btn-lg btn-primary" type="submit" [disabled]="f.invalid"> Iniciar sesion</button>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Recordar Contraseña</button>
+            
+
+        </form>
+    </div>
+</div>
