--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         <li><a routerLink="" class="nav-link px-2 text-secondary">Inicio</a></li>
         <li><a routerLink="/gestion-productos" class="nav-link px-2 text-white">Mis productos</a></li>
         <li><a routerLink="" class="nav-link px-2 text-white">Mis compras</a></li>
-        <li><a routerLink="" class="nav-link px-2 text-white">Carrito</a></li>
+        <li><a routerLink="/carrito" class="nav-link px-2 text-white">Carrito</a></li>
         <li><a routerLink="/gestion-queja" class="nav-link px-2 text-white">Atención al cliente</a></li>
       </ul>
 
