--- a/src/app/pagina/gestion-productos/gestion-productos.component.html
+++ b/src/app/pagina/gestion-productos/gestion-productos.component.html
@@ -33,8 +33,7 @@
                 <td><p>{{item.categoria}}</p></td>
                 <td>               
                     <button type="button" class="btn btn-warning rounded-circle me-2"
-                    routerLink="/editar-producto/{{item.codigo}}">
-                    <i class="fa-solid fa-pen"></i></button>
+                    routerLink="/editar-producto/{{item.codigo}}"><i class="fa-solid fa-pen"></i></button>
                 </td>
             </tr>
         </tbody>
