--- a/src/app/pagina/gestion-queja/gestion-queja.component.html
+++ b/src/app/pagina/gestion-queja/gestion-queja.component.html
@@ -1,38 +1,27 @@
 <div class="card p-5">
-      
-    <div class="d-flex align-items-baseline">             
-        <div class="order-4 p-2 d-flex justify-content-end"> 
-            <button type="submit" [disabled]="f.invalid" class="btn btn-primary" >
+
+    <div class="d-flex align-items-baseline justify-content-center"> 
+
+        <div class="order-2 p-2">
+            <form class="col-12 col-lg-auto mb-6 mb-lg-0 me-lg-8" role="search">
+                <input type="search" class="form-control " placeholder="Search..." aria-label="Search">
+            </form>
+        </div>
+        <div class="order-1 p-2">Ingrese el número de radicado que desea consultar</div>
+    </div>
+
+    <div>
+        <div class="d-flex justify-content-center p-2">
+            <button type="button" routerLink="/listar-quejas" class="btn btn-primary">
                 Mis quejas
             </button>
         </div>
-        
-        <div class="order-2 p-2">
-            <form class="col-12 col-lg-auto mb-6 mb-lg-0 me-lg-8" role="search">
-                <input type="search" class="form-control "
-                placeholder="Search..." aria-label="Search">
-            </form>              
-        </div>
-        <div class="order-1 p-2">Ingrese el número de radicado que desea consultar</div>
-    </div>  
-  
-    <form #f="ngForm" (ngSubmit)="crearQueja()">  
-        <div class="card p-4 ">
-            <div class="mb-3 ">
-                <label for="exampleFormControlTextarea1" class="form-label">Ingrese aquí su queja o solicitud</label>     
-                <input #descripcion="ngModel" class="form-control" style="height: 150px" [ngClass]="descripcion.invalid &&
-                (descripcion.dirty || descripcion.touched) ? 'is-invalid' : ''" type="text" name="descripcion"
-                [(ngModel)]="queja.descripcion" required maxlength="80" />
-                <div class="invalid-feedback">
-                    Por favor, ingrese una descripcion válida.
-                </div>
-            </div>
 
-            <div class="d-flex justify-content-center">
-                <button type="submit" [disabled]="f.invalid" class="btn btn-primary" >
-                    Crear queja
-                </button>
-            </div>
+        <div class="d-flex justify-content-center p-2 ">
+            <button type="button" routerLink="/crear-queja" class="btn btn-primary">
+                Crear queja
+            </button>
         </div>
-    </form>
+    </div>
+
 </div>
