--- a/src/app/pagina/login/login.component.html
+++ b/src/app/pagina/login/login.component.html
@@ -1,5 +1,5 @@
 
-<div class="card p-5 ">
+<div class="card p-5 justify-content-center "> 
     
     <div class="form-signin w-40 m-auto">
         
@@ -21,6 +21,8 @@
             </div>
     
             <button class="w-100 btn btn-lg btn-primary " type="submit" [disabled]="f.invalid"> Iniciar sesion</button>
+            <app-alerta [alerta]="alerta"></app-alerta>
+
             <button class="w-100 btn btn-lg btn-primary" type="submit">Recordar Contraseña</button>
             
 
