fix: :bug: Fix error in cart

--- a/src/app/pagina/carrito/carrito.component.html
+++ b/src/app/pagina/carrito/carrito.component.html
@@ -17,13 +17,13 @@
                         <td>
                             <div class="d-flex text-start align-items-center">
                                 <div class="col-4 me-3 ms-3">
-                                    <img [src]="item.producto.imagenes[0]" width="100%" />
+                                    <img [src]="item.imagenes[0]" width="100%" alt="Una imagen"/>
                                 </div>
-                                <span class="col-8">{{item.producto.nombre}}</span>
+                                <span class="col-8">{{item.nombre}}</span>
                             </div>
                         </td>
                         <td class="align-middle">
-                            <span>$ {{item.producto.precio}}</span>
+                            <span>$ {{item.precio}}</span>
                         </td>
                         <td class="align-middle">
 
