--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,54 @@
 <header class="p-3 text-bg-dark">
   <div class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a routerLink="" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-        <i class="fa-solid fa-bag-shopping fs-3"></i>
-        <span class="fs-4 ms-3 me-3">{{title}}</span>
-      </a>
-
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a routerLink="" class="nav-link px-2 text-secondary">Inicio</a></li>
-        <li><a routerLink="/gestion-productos" class="nav-link px-2 text-white">Mis productos</a></li>
-        <li><a routerLink="" class="nav-link px-2 text-white">Mis compras</a></li>
-        <li><a routerLink="/carrito" class="nav-link px-2 text-white">Carrito</a></li>
-        <li><a routerLink="" class="nav-link px-2 text-white">Perfil</a></li>
-        <li><a routerLink="/gestion-queja" class="nav-link px-2 text-white">Atención al cliente</a></li>
-        <li><a routerLink="/revisar-productos" class="nav-link px-2 text-white">Revisar productos</a></li>
-      </ul>
-
-      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search" (submit)="iraBusqueda(textoBusqueda.value)">
-        <input #textoBusqueda type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
-          aria-label="Search">
-      </form>
-
-      <div class="text-end">
-        <div *ngIf="!isLogged; then nologged else logged"></div>
-        <ng-template #nologged>
-          <div class="text-end">
-            <button type="button" routerLink="/login" class="btn btn-outline-light me-2">Login</button>
-            <button type="button" routerLink="/registro" class="btn btn-warning">Sign-up</button>
-          </div>
-        </ng-template>
-
-        <ng-template #logged>
-          <div class="text-end">
-            <label class="me-3">Hola {{email}}</label>
-            <button type="button" (click)="logout()" class="btn btn-warning">Logout</button>
-          </div>
-        </ng-template>
+    <div class="row">
+      <div class="d-inline-block col-2 col-lg-2">
+        <a routerLink="" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+          <i class="fa-solid fa-bag-shopping fs-3"></i>
+          <span class="fs-4 ms-3 me-3">{{title}}</span>
+        </a>
       </div>
-
+      <div class="d-inline-block col-10 col-lg-10">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+    
+          <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            <li><a routerLink="" class="nav-link px-2 text-secondary">Inicio</a></li>
+            <li *ngIf="isLogged"><a routerLink="/gestion-productos" class="nav-link px-2 text-white">Mis productos</a></li>
+            <li *ngIf="isLogged"><a routerLink="" class="nav-link px-2 text-white">Mis compras</a></li>
+            <li *ngIf="isLogged"><a routerLink="/carrito" class="nav-link px-2 text-white">Carrito</a></li>
+            <li *ngIf="isLogged"><a routerLink="" class="nav-link px-2 text-white">Perfil</a></li>
+            <li *ngIf="isLogged"><a routerLink="/gestion-queja" class="nav-link px-2 text-white">Atención al cliente</a></li>
+            <li *ngIf="isLogged"><a routerLink="/revisar-productos" class="nav-link px-2 text-white">Revisar productos</a></li>
+          </ul>
+    
+          <div class="text-end">
+            <div *ngIf="!isLogged; then nologged else logged"></div>
+            <ng-template #nologged>
+              <div class="text-end">
+                <button type="button" routerLink="/login" class="btn btn-outline-light me-2">Login</button>
+                <button type="button" routerLink="/registro" class="btn btn-warning">Sign-up</button>
+              </div>
+            </ng-template>
+    
+            <ng-template #logged>
+              <div class="text-end">
+                <label class="me-3">Hola {{email}}</label>
+                <button type="button" (click)="logout()" class="btn btn-warning">Logout</button>
+              </div>
+            </ng-template>
+          </div>
+    
+        </div>
+    
+        <form class="col-8 col-lg-8 mb-3 mb-lg-0 me-lg-3" role="search" (submit)="iraBusqueda(textoBusqueda.value)">
+          <input #textoBusqueda type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
+            aria-label="Search">
+        </form>
+  
+      </div>
     </div>
+
+   
+
   </div>
 </header>
 
@@ -48,7 +58,6 @@
   </div>
 </div>
 
-<div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <span class="mb-3 mb-md-0 text-muted">&copy; Universidad del Quindío</span>
@@ -60,4 +69,3 @@
       <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-facebook fs-5"></i></a></li>
     </ul>
   </footer>
-</div>
