--- a/src/app/pagina/crear-producto/crear-producto.component.html
+++ b/src/app/pagina/crear-producto/crear-producto.component.html
@@ -33,7 +33,7 @@
                 (precio.dirty || precio.touched) ? 'is-invalid' : ''" type="number" name="precio"
                 [(ngModel)]="producto.precio" required />
                 <div class="invalid-feedback">
-                    Por favor, ingrese una precio válido.
+                    Por favor, ingrese un precio válido.
                 </div>
             </div>
         </div>
@@ -45,7 +45,7 @@
                 (unidades.dirty || unidades.touched) ? 'is-invalid' : ''" type="number" name="unidades"
                 [(ngModel)]="producto.unidades" required  />
                 <div class="invalid-feedback">
-                    Por favor, ingrese una canticad válida.
+                    Por favor, ingrese una cantidad válida.
                 </div>
             </div>
         </div>
@@ -61,17 +61,21 @@
         </div>
 
         <div class="mb-3 row">
-            <label class="col-sm-2 col-form-label">Categoria: </label>
+            <label class="col-sm-2 col-form-label">Categoría: </label>
             <div class="col-sm-10">
-                <select name="categoria" [(ngModel)]="producto.categoria" required>
-                    <option value="" selected>Seleccione una categoría</option>
-                    <option [value]="i+1" *ngFor="let item of categorias; index as i">{{item}}</option>
-                </select>
+                <div *ngFor="let item of categorias; index as i">
+                    <input type="checkbox" name="categoria{{i+1}}" [(ngModel)]="producto.categoria[i]" [value]="item" required>
+                    <label>{{item}}</label>
+                </div>
+                <div class="invalid-feedback">
+                    Por favor, seleccione al menos una categoría.
+                </div>
             </div>
         </div>
 
-        <button type="submit" [disabled]="f.invalid" class="btn btn-primary"><i class="fa-solid
-        {{esEdicion ? 'fa-pencil' : 'fa-circle-plus'}} me-1"></i>{{ esEdicion ? 'Editar' : 'Crear' }}
-            Producto</button>
+        <button type="submit" [disabled]="f.invalid" class="btn btn-primary">
+            <i class="fa-solid {{esEdicion ? 'fa-pencil' : 'fa-circle-plus'}} me-1"></i>
+            {{ esEdicion ? 'Editar' : 'Crear' }} Producto
+        </button>
     </form>
 </div>
